--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <title>Paliedispari</title>
 </head>
 <body>
-    <h1></h1>
+    <div class="container my-5 text-center">
+        <h1>Palindromo?</h1>
+        <h3 id="parola-finale"></h3>
+
+        <h1>Pari o dispari?</h1>
+    </div>
+    
     
 
 
